# aiassistant

./: .env.template  .gitignore  README.md  compose.local.yml  compose.yml  docker-compose.dev.yml  docker-compose.platform.yml  docker-compose.yml  gitea.local.test.crt  makefile  package.json  pom.xml  run_aider.sh
.devcontainer/: Dockerfile  devcontainer.json
.events/: 20260713T061601-WorkflowStarted-4d922de0.json  20260713T061602-StepCompleted-f2ab9e4d.json  20260713T061602-StepStarted-1b07e85f.json  20260713T061602-WorkflowFailed-7273db30.json
.gitea/workflows/: build-ci-image.yaml  ci-diagnostic.yaml  ci-image.yaml  ci-v2.yaml  diagnostic.yaml  main.yml  pr.yml  promote.yml
.github/workflows/: control-center-ui.yml
agentic/docs/: ROADMAP.md  (+3 more)
ai-assistant-infra/: .gitignore
delivery/: pyproject.toml  requirements.txt
delivery/delivery/: __init__.py  cli.py  engine.py  models.py  package_registry.py  provider_registry.py
delivery/delivery/commands/: __init__.py  backup.py  build.py  deploy.py  doctor.py  logs.py  promote.py  publish.py  restore.py  rollback.py  status.py  test.py  validate.py
delivery/delivery/lib/: compose.py  docker.py  registry.py  release.py  store.py
delivery/delivery/providers/: base.py  python.py  typescript.py
docs/: SYSTEM_CONTEXT.md  architecture.md  ci-cd.md  current-state.md  database-strategy.md  decisions.md  deployment.md  dev-environment.md  networking.md  operations.md  target-state.md
infra/: wait_for.py
infrastructure/: compose.yml
legacy/: docker-compose.dev.yml  docker-compose.yml
platform/: compose.yml
(+326 files in other folders)
