[project]
name = "delivery"
version = "0.1.0"
description = "Capability-oriented delivery CLI for Gitea Actions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "docker>=7.0.0",
]

[project.scripts]
delivery = "delivery.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"
